# my-notes

./: .cursorrules  .gitignore  .tool-versions  README.md  pyproject.toml
finances/expenses/: 2025-11-07.json  2025-11-07.md  2026-02-12.json  accounts.json  expense_charts.py  expense_models.py  notebook.ipynb
notes/finances/retirement_plan/: plan.md
